classDiagram
    Obra "1" *-- "1..*" ItemEap : contém raiz
    Obra "1" *-- "0..*" EtapaObra : possui
    Obra "*" o-- "1" Empresa : contratada
    Obra "*" --> "1" UnidadeFederativa : uf

    ItemEap "1" o-- "0..1" EtapaObra : associa-se
    ItemEap "0..1" *-- "0..*" ItemEap : hierarquia (pai/filhos)

    EtapaObra "1" *-- "0..*" ItemOrcamento : possui
    EtapaObra "*" <--> "*" EtapaObra : dependência CPM (predecessores/sucessores)

    ItemOrcamentoInsumo --|> ItemOrcamento : é um
    ItemOrcamentoComposicao --|> ItemOrcamento : é um

    ItemOrcamentoInsumo "*" --> "1" Insumo : referencia
    ItemOrcamentoComposicao "*" --> "1" Composicao : referencia

    Composicao "1" *-- "1..*" ItemComposicao : possui
    ItemComposicao "*" o-- "0..1" Insumo : pode ser
    ItemComposicao "*" o-- "0..1" Composicao : pode ser auxiliar

    Insumo "*" --> "1" UnidadeMedida : unidade
    Composicao "*" --> "1" UnidadeMedida : unidade

    class Obra{
        -String descricao
        -Status status
        -Empresa empresa
        -UnidadeFederativa uf
        -ZoneId fusoHorario
        -List~ItemEap~ nodosEap
        -List~EtapaObra~ etapas
    }

    class ItemEap {
        -String nome
        -Obra obra
        -Double posicao
        -ItemEap pai
        -List~ItemEap~ filhos
        -EtapaObra etapa
    }

    class EtapaObra{
        -String descricao
        -DateTime inicio
        -DateTime fim
        -Integer prazoEsperado
        -DateTime earlyStart
        -DateTime earlyFinish
        -DateTime lateStart
        -DateTime lateFinish
        -Integer folgaDias
        -Bool caminhoCritico
        -List~EtapaObra~ predecessores
        -List~EtapaObra~ sucessores
        -List~ItemOrcamento~ orcamentos
    }

    class Insumo {
        -String codigo
        -String descricao
        -UnidadeMedida unidade
        -Decimal preco
    }

    class Composicao {
        -String codigo
        -String descricao
        -UnidadeMedida unidade
        -Decimal preco
        -List~ItemComposicao~ itens
    }

    class ItemComposicao {
        -Decimal coeficiente
        -Insumo insumo
        -Composicao composicaoPai
        -Composicao composicaoAuxiliar
    }

    class UnidadeMedida {
        <<enumeration>>
    }

    class ItemOrcamento {
        <<abstract>>
        -Decimal quantidade
    }

    class ItemOrcamentoInsumo {
        -Insumo insumo
    }

    class ItemOrcamentoComposicao {
        -Composicao composicao
    }

    class UnidadeFederativa {
        <<enumeration>>
    }

    class Empresa{
    }